[package]
name = "rootstock-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
image = "0.25.6"
qrcode = "0.14.1"
serde = { version = "1.0.225", features = ["derive"] }
# serde_json = "1.0.140"
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }
sha3 = "0.10.8"
tokio = { version = "1.45.1", features = ["full"] }
zeroize = "1.8.1"
# Alloy dependencies - successor to ethers-rs with security fixes
alloy = { version = "0.6", features = ["full", "provider-http", "signer-local", "contract", "rpc-types", "consensus"] }
alloy-provider = "0.6"
alloy-signer = "0.6" 
alloy-signer-local = "0.6"
alloy-contract = "0.6"
alloy-primitives = "0.6"
alloy-rpc-types = "0.6"
alloy-transport-http = "0.6"
alloy-consensus = "0.6"
thiserror = "2.0.12"
clap = { version = "4.5.36", features = ["derive"] }
k256 = "0.13.4"
env_logger = "0.11.8"
log = "0.4.28"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
colored = "3.0.0"
tempfile = "3.20.0"
eth-keystore = "0.5.0"
rand = "0.8.5"
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
prettytable-rs = "0.10.0"
dirs = "6.0.0"
toml = "0.9.7"
url = "2.5.7"
aes = "0.8.4"
scrypt = "0.11.0"
base64 = "0.22.1"
rpassword = "7.4.0"
cbc = "0.1.2"
cipher = "0.4.4"
typenum = "1.18.0"
generic-array = "1.2.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
clearscreen = "4.0.2"
inquire = "0.9.1"
async-trait = "0.1.89"
csv = "1.3.1"

